--- a/test/fixtures/compare_makes.yml
+++ b/test/fixtures/compare_makes.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  make_id,website_id,value: MyString
+  make_id: 1
+  website_id: 1
+  value: MyString
 
 two:
-  make_id,website_id,value: MyString
+  make_id: 1
+  website_id: 2
+  value: MyString
