--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  collation: utf8_general_ci
+  database: automobile_production
   pool: 5
-  timeout: 5000
+  username: "root"
+  password: "5n3ll1975"
+  socket: /var/run/mysqld/mysqld.sock
